final selectores simples

--- a/css/estilo_selector_simple.css
+++ b/css/estilo_selector_simple.css
@@ -1,6 +1,5 @@
 p{
     text-align: center;
-    color: red;
 }
 #id_p{
 
@@ -8,9 +7,21 @@ p{
     color: blue;
 
 }
-.right-red{
+.right-green{
 
     text-align: right;
     color: green;
 
+}
+p.red{
+    color:red;
+}
+.brown{
+    color: brown;
+}
+.large{
+    font-size: 25px;
+}
+h1,h2,p{
+    font-family: forte;
 }
