--- a/views/html_con_estilos/selectores_simples.html
+++ b/views/html_con_estilos/selectores_simples.html
@@ -7,8 +7,12 @@
     <title>Selectores Simples</title>
 </head>
 <body>
+    <h1>Encabezado h1</h1>
+    <h2>Encabezado h2 </h2>
     <p> Por nombre</p>
     <p id="id_p"> Por ID</p>
-    <p class="right-red"> Por Clase</p>
+    <p class="right-green"> Por Clase</p>
+    <p class="red"> por nombre y clase</p>
+    <p class="brown large">Este parrafo tiene dos clases</p>
 </body>
 </html>
